RESOLVED FIXED64107
[EFL] DRT: Leak cairo_t to make the pixel tests stop crashing
https://bugs.webkit.org/show_bug.cgi?id=64107
Summary [EFL] DRT: Leak cairo_t to make the pixel tests stop crashing
Raphael Kubo da Costa (:rakuco)
Reported 2011-07-07 10:21:05 PDT
[EFL] DRT: Leak cairo_t to make the pixel tests stop crashing
Attachments
Patch (1.56 KB, patch)
2011-07-07 12:03 PDT, Raphael Kubo da Costa (:rakuco)
no flags
Raphael Kubo da Costa (:rakuco)
Comment 1 2011-07-07 12:03:11 PDT
WebKit Review Bot
Comment 2 2011-07-07 18:16:20 PDT
Comment on attachment 100013 [details] Patch Clearing flags on attachment: 100013 Committed r90605: <http://trac.webkit.org/changeset/90605>
WebKit Review Bot
Comment 3 2011-07-07 18:16:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.