[EFL] DRT: Leak cairo_t to make the pixel tests stop crashing https://bugs.webkit.org/show_bug.cgi?id=64107

Patch by Raphael Kubo da Costa <kubo@profusion.mobi> on 2011-07-07
Reviewed by Kent Tamura.

The pointer is later managed by BitmapContext, but it was being
de-refed and deleted earlier by our RefPtr, causing crashes in all
pixel tests.

We now call leakRef() to make sure it is not removed when our
createBitmapContextFromWebView goes out of context.

* DumpRenderTree/efl/PixelDumpSupportEfl.cpp:
(createBitmapContextFromWebView):

Canonical link: https://commits.webkit.org/79870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90605 268f45cc-cd09-0410-ab3c-d52691b4dbfc